--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -2,3 +2,9 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /api
+
+index:
+    path: /books
+    methods: ['GET']
+    defaults:
+        _controller: App\Controller\IndexController::index
