--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@
 /vendor/
 ###< symfony/framework-bundle ###
 docker-compose.yml
+###> lexik/jwt-authentication-bundle ###
+/config/jwt/*.pem
+###< lexik/jwt-authentication-bundle ###
