--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,6 +7,6 @@ vich_uploader:
             uri_prefix: /videos
             upload_destination: '%kernel.project_dir%/public/videos'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
-            inject_on_load: false
+            inject_on_load: true
             delete_on_update: true
             delete_on_remove: true
